--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
         <header>
             <div class="bg_video">
-                <video playsinline="true" autoplay="true" muted="true" loop="true" poster="" style="object-position:50% 50%; object-fit: cover; position: absolute; top: 0; left: 0; width: 100%; height: 100% ">
+                <video playsinline="true" autoplay="true" muted="true" loop="true" poster="" preload="auto" style="object-position:50% 50%; object-fit: cover; position: absolute; top: 0; left: 0; width: 100%; height: 100% ">
                 <source src="./Video_sala/main_no_sound.mp4" type="video/mp4"></video>    
             </div>
             <div class="text-box">
