--- a/index.html
+++ b/index.html
@@ -35,5 +35,27 @@
             <a href="" class="btn btn-alb btn-anim">Antrenamente</a>
         </div>
         </header>
+        <main>
+            <section><div class="section-despre">
+                <div class="centrare-text">
+                <h2 class="antrenamente">
+                      Antrenamente:  incepatori-intermediari-avansati
+                </h2>
+            </div>
+            <div class="row">
+                <div class="col-1-of-2">
+                    text continut
+                </div>
+                <div class="row">
+                <div class="col-1-of-2">
+                  imagini
+                </div>
+            </div>
+        </section>
+
+        </main>
+
+        
+        <footer class="footer">Club Sportiv Coral - Bacau 2024</footer>
     </body>
 </html>
