--- a/index.html
+++ b/index.html
@@ -32,23 +32,31 @@
                 <span class="header-principal">Academia Coral</span>
                 <span class="header-secundar">Jiu Jitsu Brazilian - Judo - Grappling</span>
             </h1>
-            <a href="" class="btn btn-alb btn-anim">Antrenamente</a>
+            <a href="#antrenamente" class="btn btn-alb btn-anim">Antrenamente</a>
         </div>
         </header>
         <main>
             <section><div class="section-despre">
                 <div class="centrare-text">
-                <h2 class="antrenamente">
+                <h2 class="antrenamente" id="antrenamente">
                       Antrenamente:  incepatori-intermediari-avansati
                 </h2>
             </div>
             <div class="row">
                 <div class="col-1-of-2">
-                    text continut
+                   gggg
                 </div>
                 <div class="row">
                 <div class="col-1-of-2">
-                  imagini
+                    <h3 class="heading"> aaaaaaaaa aaaaaaa</h3>
+                    <p class="paragraf">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, nisi.
+                      Nam aliquid perspiciatis amet vitae accusantium explicabo minus similique aut. 
+                      Sed iusto, aperiam debitis quasi repellat neque sequi nobis illo.</p>
+                      <h3 class="heading"> aaaaaaaaa aaaaaaa</h3>
+                    <p class="paragraf">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, nisi.
+                      Nam aliquid perspiciatis amet vitae accusantium explicabo minus similique aut. 
+                      Sed iusto, aperiam debitis quasi repellat neque sequi nobis illo.</p>
+                      <a href="#" class="btn-text">  mai multe detalii&rarr;</a>
                 </div>
             </div>
         </section>
