--- a/index.html
+++ b/index.html
@@ -39,12 +39,24 @@
             <section><div class="section-despre">
                 <div class="centrare-text">
                 <h2 class="antrenamente" id="antrenamente">
-                      Antrenamente:  incepatori-intermediari-avansati
+                      Antrenamente
                 </h2>
             </div>
             <div class="row">
                 <div class="col-1-of-2">
-                   gggg
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit voluptates
+                    repudiandae molestiae eveniet. Perspiciatis, exercitationem minus. Accusantium 
+                    architecto doloremque, minus nulla 
+                   cupiditate maxime facilis minima distinctio iure beatae optio et?
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit voluptates
+                   repudiandae molestiae eveniet. Perspiciatis, exercitationem minus. Accusantium 
+                   architecto doloremque, minus nulla 
+                  cupiditate maxime facilis minima distinctio iure beatae optio et
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit voluptates
+                  repudiandae molestiae eveniet. Perspiciatis, exercitationem minus. Accusantium 
+                  architecto doloremque, minus nulla 
+                 cupiditate maxime facilis minima distinctio iure beatae optio et</p>
+                 <a href="#" class="btn-text">  mai multe detalii&rarr;</a> 
                 </div>
                 <div class="row">
                 <div class="col-1-of-2">
