modificare sectiune despre

--- a/index.html
+++ b/index.html
@@ -39,36 +39,37 @@
             <section><div class="section-despre">
                 <div class="centrare-text">
                 <h2 class="antrenamente" id="antrenamente">
-                      Antrenamente
+                      Ce facem noi...
                 </h2>
             </div>
             <div class="row">
                 <div class="col-1-of-2">
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit voluptates
-                    repudiandae molestiae eveniet. Perspiciatis, exercitationem minus. Accusantium 
-                    architecto doloremque, minus nulla 
-                   cupiditate maxime facilis minima distinctio iure beatae optio et?
-                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit voluptates
-                   repudiandae molestiae eveniet. Perspiciatis, exercitationem minus. Accusantium 
-                   architecto doloremque, minus nulla 
-                  cupiditate maxime facilis minima distinctio iure beatae optio et
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit voluptates
-                  repudiandae molestiae eveniet. Perspiciatis, exercitationem minus. Accusantium 
-                  architecto doloremque, minus nulla 
-                 cupiditate maxime facilis minima distinctio iure beatae optio et</p>
-                 <a href="#" class="btn-text">  mai multe detalii&rarr;</a> 
+                  <div class="comp">
+                    <img src="img/1. bjj_nova_kids (6 of 192).jpeg" alt="" class="comp-foto comp-foto--p1">
+                    <img src="img/9M7A6646.jpg" alt="" class="comp-foto comp-foto--p2">
+                    <img src="img/1. bjj_nova_kids (29 of 192).jpg" alt="" class="comp-foto comp-foto--p3">
+                </div>
                 </div>
                 <div class="row">
                 <div class="col-1-of-2">
-                    <h3 class="heading"> aaaaaaaaa aaaaaaa</h3>
-                    <p class="paragraf">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, nisi.
-                      Nam aliquid perspiciatis amet vitae accusantium explicabo minus similique aut. 
-                      Sed iusto, aperiam debitis quasi repellat neque sequi nobis illo.</p>
-                      <h3 class="heading"> aaaaaaaaa aaaaaaa</h3>
-                    <p class="paragraf">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam, nisi.
-                      Nam aliquid perspiciatis amet vitae accusantium explicabo minus similique aut. 
-                      Sed iusto, aperiam debitis quasi repellat neque sequi nobis illo.</p>
-                      <a href="#" class="btn-text">  mai multe detalii&rarr;</a>
+                    <h3 class="heading"> Dspre Academia Coral BJJ Bacau</h3>
+                    <p class="paragraf">Academia Nova BJJ Bacău este o unitate de Jiu-Jitsu brazilian situată în
+                        Bacău, România, fondată și condusă de Matei Constantin, centură neagră în BJJ. Academia este dedicată furnizării de instruire de înaltă calitate în 
+                        Jiu-Jitsu brazilian, concentrându-se pe tehnici de grappling, autoapărare și luptă la sol 
+                        pentru practicanții de toate nivelurile, de la începători la studenți avansați. Credem că 
+                        Brazilian Jiu-Jitsu nu este doar o artă marțială, ci un mod de viață care îi ajută pe oameni 
+                        să dezvolte disciplina, respectul și camaraderia. Scopul nostru este de a crea o atmosferă
+                        care să favorizeze creșterea personală și bunăstarea mentală prin practicarea Brazilian 
+                        Jiu-Jitsu. Salutăm tuturor, indiferent de antecedentele lor, să se alăture comunității
+                         noastre și să experimenteze beneficiile acestei arte marțiale uimitoare.</p>
+                         
+                      <h3 class="heading"> </h3>
+                    <p class="paragraf">Intră în călătoria vizuală a Nova BJJ prin galeria noastră.
+                         Cufundați-vă în arta, disciplina și spiritul Jiu-Jitsu brazilian surprinse în 
+                         fotografii uimitoare. Fiți martor la dăruirea, triumfurile și camaraderia care 
+                         definesc comunitatea noastră vibrantă. Experimentați esența pasiunii și 
+                        angajamentului nostru cu fiecare imagine.</p>
+                      <a href="despre.html" class="btn-text">  mai multe detalii&rarr;</a>
                 </div>
             </div>
         </section>
