Laurentiu chooses the Abonamente section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="">Academia Coral Sport</a></li>
                 <li><a href="">Galerie</a></li>
                 <li><a href="#echipa">Echipa noastra</a></li>
-                <li><a href="">Abonamente</a></li>
+                <li><a href="#">Abonamente</a></li>
                 <li><a href="">Program</a></li>
                 <li class="push"><a href="">Contact</a></li>
         </ul>
