--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="">Academia Coral Sport</a></li>
                 <li><a href="">Galerie</a></li>
                 <li><a href="#echipa">Echipa noastra</a></li>
-                <li><a href="#">Abonamente</a></li>
+                <li><a href="#antrenamente">Abonamente</a></li>
                 <li><a href="">Program</a></li>
                 <li class="push"><a href="">Contact</a></li>
         </ul>
@@ -74,8 +74,8 @@
                 </div>
             </div>
         </section>
-        <section class="section-antrenamente">
-            <h2 class="antrenamente" id="antrenamente">
+        <section class="section-antrenamente" id="antrenamente">
+            <h2 class="antrenamente" >
                 Antrenamente
           </h2>
             <div class="row-ant">
@@ -114,6 +114,11 @@
 
 
         <section class="section-echipa">
+            <!-- <div class="bg-video2">
+                <video src="" class="bg-video_content" autoplay muted loop>
+                    <source src="./Video_sala/main_no_sound.mp4" type="video">
+                </video>
+            </div> -->
             <h2 class="antrenamente" id="echipa">
                 Echipa noastra
           </h2>
