--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <section class="despre" id="despre">
                 <div class="section-despre">
                 <div class="centrare-text">
-                <h2 class="antrenamente" id="">
+                <h2 class="antrenamente" id="despre">
                       Ce facem noi...
                 </h2>
             </div>
@@ -186,7 +186,7 @@
          <div class="footer-nav">
                     <ul class="footer-list">
                         <li class="footer-item"><a href="#" class="footer-link"> Coral Sport</a> </li>
-                        <li class="footer-item"><a href="#" class="footer-link"> Despre</a> </li>
+                        <li class="footer-item"><a href="#despre" class="footer-link"> Despre</a> </li>
                         <li class="footer-item"><a href="#" class="footer-link"> Contact</a> </li>
                         <li class="footer-item"><a href="#" class="footer-link"> GDPR</a> </li>
                         <li class="footer-item"><a href="#" class="footer-link"> Termeni</a> </li>
