--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#echipa">Echipa noastra</a></li>
                 <li><a href="">Abonamente</a></li>
                 <li><a href="#antrenamente">Program</a></li>
-                <li class="push"><a href="">Contact</a></li>
+                <li class="push"><a href="#contact">Contact</a></li>
         </ul>
         </nav>
         <header>
@@ -176,6 +176,38 @@
                     </div>  
             </div>
         </section>
+        <!-- sectiune contact-->
+        <section class="contact-section" id="contact">
+            <div class="row contact-content">
+              <div class="col-1-of-2">
+                <h2 class="contact-heading">Contacteaz-ne</h2>
+                <p class="paragraf">Pentru întrebări, colaborări sau alte informații, te rugăm să ne contactezi folosind detaliile de mai jos sau să completezi formularul.</p>
+                <ul class="contact-details">
+                  <li>Telefon: +40 741 419 374</li>
+                  <li>Email: olariu.bogdan@gmail.com</li>
+                  <li>Adresă: Str. Milcov Nr. 112, Bacau</li>
+                </ul>
+              </div>
+              <div class="col-1-of-2">
+                <form class="contact-form">
+                  <div class="form-group">
+                    <label for="name">Nume</label>
+                    <input type="text" id="name" name="name" class="form-input" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" class="form-input" required>
+                  </div>
+                  <div class="form-group">
+                    <label for="message">Mesaj</label>
+                    <textarea id="message" name="message" class="form-textarea" rows="5" required></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-alb">Trimite</button>
+                </form>
+              </div>
+            </div>
+          </section>
+          
      </main>
     </body>
     <footer class="footer">
@@ -186,7 +218,7 @@
                     <ul class="footer-list">
                         <li class="footer-item"><a href="#" class="footer-link"> Coral Sport</a> </li>
                         <li class="footer-item"><a href="#despre" class="footer-link"> Despre</a> </li>
-                        <li class="footer-item"><a href="#" class="footer-link"> Contact</a> </li>
+                        <li class="footer-item"><a href="#contact" class="footer-link"> Contact</a> </li>
                         <li class="footer-item"><a href="#" class="footer-link"> GDPR</a> </li>
                         <li class="footer-item"><a href="#" class="footer-link"> Termeni</a> </li>
 
