mod_sursa_img_sec_echipa

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <h2 class="antrenor">Matei Constantin</h2>
                     <div class="echipa-box">
                         <figure class="membru"></figure>
-                        <img src="../img/matei.png" class="antrenor1"
+                        <img src="./img/matei.png" class="antrenor1"
                         alt="Matei Constantin">
                    </figure>
                     </div>
@@ -145,7 +145,7 @@
                     <h2 class="antrenor">Bogdan Olariu</h2>
                     <div class="echipa-box">
                         <figure class="membru"></figure>
-                        <img src="../img/bogdan.png" class="antrenor1"
+                        <img src="./img/bogdan.png" class="antrenor1"
                         alt="Matei Constantin">
                    </figure>
                     </div>
@@ -163,7 +163,7 @@
                     <h2 class="antrenor">Stefan Benchea</h2>
                     <div class="echipa-box">
                         <figure class="membru"></figure>
-                        <img src="../img/stefan.png" class="antrenor1"
+                        <img src="./img/stefan.png" class="antrenor1"
                         alt="Matei Constantin">
                    </figure>
                     </div>
