--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <nav class="zone nav sticky">
             <ul class="main-nav">
-                <li><a href="">Academia Coral Sport</a></li>
+                <li><a href="">Academia Nova - Coral Sport</a></li>
                 <li><a href="">Galerie</a></li>
                 <li><a href="#echipa">Echipa noastra</a></li>
                 <li><a href="">Abonamente</a></li>
@@ -29,7 +29,7 @@
             </div>
             <div class="text-box">
             <h1 class="header-prim">
-                <span class="header-principal">Academia Coral</span>
+                <span class="header-principal">Academia NOVA</span>
                 <span class="header-secundar">Jiu Jitsu Brazilian - Judo - Grappling</span>
             </h1>
             <a href="#antrenamente" class="btn btn-alb btn-anim">Antrenamente</a>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="row">
                 <div class="col-1-of-2">
-                    <h3 class="heading"> Dspre Academia Coral BJJ Bacau</h3>
+                    <h3 class="heading"> Dspre Academia Nova BJJ Bacau</h3>
                     <p class="paragraf">Academia Nova BJJ Bacău este o unitate de Jiu-Jitsu brazilian situată în
                         Bacău, România, fondată și condusă de Matei Constantin, centură neagră în BJJ. Academia este dedicată furnizării de instruire de înaltă calitate în 
                         Jiu-Jitsu brazilian, concentrându-se pe tehnici de grappling, autoapărare și luptă la sol 
@@ -182,6 +182,7 @@
               <div class="col-1-of-2">
                 <h2 class="contact-heading">Contacteaz-ne</h2>
                 <p class="paragraf">Pentru întrebări, colaborări sau alte informații, te rugăm să ne contactezi folosind detaliile de mai jos sau să completezi formularul.</p>
+                <p class="paragraf">Cont BCR IBAN RO59 RNCB 0279 1754 3718 0001.</p>
                 <ul class="contact-details">
                   <li>Telefon: +40 741 419 374</li>
                   <li>Email: olariu.bogdan@gmail.com</li>
@@ -216,7 +217,7 @@
         </div>
          <div class="footer-nav">
                     <ul class="footer-list">
-                        <li class="footer-item"><a href="#" class="footer-link"> Coral Sport</a> </li>
+                        <li class="footer-item"><a href="#" class="footer-link"> Nova BJJ</a> </li>
                         <li class="footer-item"><a href="#despre" class="footer-link"> Despre</a> </li>
                         <li class="footer-item"><a href="#contact" class="footer-link"> Contact</a> </li>
                         <li class="footer-item"><a href="#" class="footer-link"> GDPR</a> </li>
