--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
               <div class="col-1-of-2">
                 <h2 class="contact-heading">Contacteaz-ne</h2>
                 <p class="paragraf">Pentru întrebări, colaborări sau alte informații, te rugăm să ne contactezi folosind detaliile de mai jos sau să completezi formularul.</p>
-                <p class="paragraf">Cont BCR IBAN RO59 RNCB 0279 1754 3718 0001.</p>
+                <p class="paragraf">Asociatia Club Sportiv Coral - Cont BCR IBAN RO59 RNCB 0279 1754 3718 0001.</p>
                 <ul class="contact-details">
                   <li>Telefon: +40 741 419 374</li>
                   <li>Email: olariu.bogdan@gmail.com</li>
@@ -229,7 +229,7 @@
            
             <div class="col-1of-2">
                 <p class="footer_copy-right">
-                    Nova BJJ <a href="#"> Asociatia Club Sportiv Boral Bacau </a>Telefon: 0741.419.374, str. Milcov 112 C
+                    Nova BJJ -  <a href="#"> Asociatia Club Sportiv Coral Bacau </a>Telefon: 0741.419.374, str. Milcov 112 C
                     Copyright &copy proiect IOC - grupa 2 - anul1 IFR 2024.
                 </p>
             </div>
