--- a/pages/despre.html
+++ b/pages/despre.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="css/icon-font.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon-32x32.png">
+    <link rel="stylesheet" href="../css/icon-font.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" type="image/png" href="../img/favicon-32x32.png">
 
     <title>Academia Club Sportiv Coral</title>
 </head>
@@ -16,30 +16,24 @@
 <body>
     <nav class="zone nav sticky">
         <ul class="main-nav">
-            <li><a href="./index.html">Academia Nova - Coral Sport</a></li>
-            <li><a href="./pages/gallery.html">Galerie</a></li>
-            <li><a href="./pages/team.html">Echipa noastra</a></li>
-            <li><a href="./pages/abonamente.html">Abonamente</a></li>
-            <li><a href="./pages/antrenamente.html">Program</a></li>
-            <li class="push"><a href="./pages/contactUS.html">Contact</a></li>
+            <li><a href="../index.html">Academia Nova - Coral Sport</a></li>
+            <li><a href="./gallery.html">Galerie</a></li>
+            <li><a href="./team.html">Echipa noastra</a></li>
+            <li><a href="./abonamente.html">Abonamente</a></li>
+            <li><a href="./antrenamente.html">Program</a></li>
+            <li class="push"><a href="./contactUS.html">Contact</a></li>
         </ul>
     </nav>
     <header>
         <div class="bg_video">
             <video playsinline="true" autoplay="true" muted="true" loop="true" poster="" preload="auto"
                 style="object-position:50% 50%; object-fit: cover; position: absolute; top: 0; left: 0; width: 100%; height: 100% ">
-                <source src="./Video_sala/main_no_sound.mp4" type="video/mp4">
+                <source src="../Video_sala/main_no_sound.mp4" type="video/mp4">
             </video>
-        </div>
-        <div class="text-box">
-            <h1 class="header-prim">
-                <span class="header-principal">Academia NOVA</span>
-                <span class="header-secundar">Jiu Jitsu Brazilian - Judo - Grappling</span>
-            </h1>
-            <a href="./pages/antrenamente.html" class="btn btn-alb btn-anim">Antrenamente</a>
         </div>
     </header>
     <main>
+        <!-- sectiune despre-->
         <section class="despre" id="despre">
             <div class="section-despre">
                 <div class="centrare-text">
@@ -50,9 +44,9 @@
                 <div class="row">
                     <div class="col-1-of-2">
                         <div class="comp">
-                            <img src="img/1. bjj_nova_kids (6 of 192).jpeg" alt="" class="comp-foto comp-foto--p1">
-                            <img src="img/9M7A6646.jpg" alt="" class="comp-foto comp-foto--p2">
-                            <img src="img/1. bjj_nova_kids (29 of 192).jpg" alt="" class="comp-foto comp-foto--p3">
+                            <img src="../img/1. bjj_nova_kids (6 of 192).jpeg" alt="" class="comp-foto comp-foto--p1">
+                            <img src="../img/9M7A6646.jpg" alt="" class="comp-foto comp-foto--p2">
+                            <img src="../img/1. bjj_nova_kids (29 of 192).jpg" alt="" class="comp-foto comp-foto--p3">
                         </div>
                     </div>
                     <div class="row">
@@ -79,22 +73,20 @@
                                 fotografii uimitoare. Fiți martor la dăruirea, triumfurile și camaraderia care
                                 definesc comunitatea noastră vibrantă. Experimentați esența pasiunii și
                                 angajamentului nostru cu fiecare imagine.</p>
-                            <a href="./pages/despre.html" class="btn-text"> mai multe detalii&rarr;</a>
                         </div>
                     </div>
         </section>
-
     </main>
 </body>
 <footer class="footer">
     <div class="logobox">
-        <img src="./img/Logo Coral.png" class="footer-logo" alt="" sizes="" srcset="">
+        <img src="../img/Logo Coral.png" class="footer-logo" alt="" sizes="" srcset="">
     </div>
     <div class="footer-nav">
         <ul class="footer-list">
             <li class="footer-item"><a href="#" class="footer-link"> Nova BJJ</a> </li>
-            <li class="footer-item"><a href="#despre" class="footer-link"> Despre</a> </li>
-            <li class="footer-item"><a href="#contact" class="footer-link"> Contact</a> </li>
+            <li class="footer-item"><a href="./despre.html" class="footer-link"> Despre</a> </li>
+            <li class="footer-item"><a href="./contactUS.html" class="footer-link"> Contact</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> GDPR</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> Termeni</a> </li>
 
