--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -33,42 +33,56 @@
         </div>
     </header>
     <main>
-        <!-- sectiune contact-->
-        <section class="contact-section" id="contact">
-            <div class="row contact-content">
-                <div class="col-1-of-2">
-                    <h2 class="contact-heading">Contacteaz-ne</h2>
-                    <p class="paragraf">Pentru întrebări, colaborări sau alte informații, te rugăm să ne contactezi
-                        folosind detaliile de mai jos sau să completezi formularul.</p>
-                    <p class="paragraf">Asociatia Club Sportiv Coral - Cont BCR IBAN RO59 RNCB 0279 1754 3718 0001.</p>
-                    <ul class="contact-details">
-                        <li>Telefon: +40 741 419 374</li>
-                        <li>Email: olariu.bogdan@gmail.com</li>
-                        <li>Adresă: Str. Milcov Nr. 112, Bacau</li>
-                    </ul>
+        <!-- sectiune gallery-->
+      
+        <section class="section-gallery">
+            <h2 class="antrenamente" id="echipa">
+                Galerie Foto / Video
+            </h2>
+            <div class="row">
+                <div class="column">
+                  <img src="../img/1-gal.jpg">
+                  <img src="../img/2-gal.jpg">
+                  <img src="../img/3-gal.jpg">
+                  <img src="../img/4-gal.jpg">
+                  <img src="../img/5-gal.jpg">
+                  <img src="../img/6-gal.jpg">
+                  <img src="../img/1-gal.jpg">
                 </div>
-                <div class="col-1-of-2">
-                    <form class="contact-form">
-                        <div class="form-group">
-                            <label for="name">Nume</label>
-                            <input type="text" id="name" name="name" class="form-input" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" id="email" name="email" class="form-input" required>
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Mesaj</label>
-                            <textarea id="message" name="message" class="form-textarea" rows="5" required></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-alb">Trimite</button>
-                    </form>
+                <div class="column">
+                    <img src="../img/2-gal.jpg">
+                    <img src="../img/3-gal.jpg">
+                    <img src="../img/6-gal.jpg">
+                    <img src="../img/1-gal.jpg">
+                    <img src="../img/5-gal.jpg">
+                    <img src="../img/2-gal.jpg">
+                    <img src="../img/3-gal.jpg">
                 </div>
-            </div>
+                <div class="column">
+                    <img src="../img/6-gal.jpg">
+                    <img src="../img/5-gal.jpg">
+                    <img src="../img/4-gal.jpg">
+                    <img src="../img/3-gal.jpg">
+                    <img src="../img/2-gal.jpg">
+                    <img src="../img/6-gal.jpg">
+                    <img src="../img/1-gal.jpg">
+                </div>
+                <div class="column">
+                    <img src="../img/2-gal.jpg">
+                    <img src="../img/3-gal.jpg">
+                    <img src="../img/1-gal.jpg">
+                    <img src="../img/5-gal.jpg">
+                    <img src="../img/6-gal.jpg">
+                    <img src="../img/3-gal.jpg">
+                    <img src="../img/1-gal.jpg">
+                </div>
+              </div>
+
         </section>
 
     </main>
 </body>
+
 <footer class="footer">
     <div class="logobox">
         <img src="../img/Logo Coral.png" class="footer-logo" alt="" sizes="" srcset="">
@@ -76,11 +90,10 @@
     <div class="footer-nav">
         <ul class="footer-list">
             <li class="footer-item"><a href="#" class="footer-link"> Nova BJJ</a> </li>
-            <li class="footer-item"><a href="#despre" class="footer-link"> Despre</a> </li>
-            <li class="footer-item"><a href="#contact" class="footer-link"> Contact</a> </li>
+            <li class="footer-item"><a href="./despre.html" class="footer-link"> Despre</a> </li>
+            <li class="footer-item"><a href="./contactUS.html" class="footer-link"> Contact</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> GDPR</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> Termeni</a> </li>
-
         </ul>
     </div>
 
