--- a/pages/team.html
+++ b/pages/team.html
@@ -107,11 +107,10 @@
     <div class="footer-nav">
         <ul class="footer-list">
             <li class="footer-item"><a href="#" class="footer-link"> Nova BJJ</a> </li>
-            <li class="footer-item"><a href="#despre" class="footer-link"> Despre</a> </li>
-            <li class="footer-item"><a href="#contact" class="footer-link"> Contact</a> </li>
+            <li class="footer-item"><a href="./despre.html" class="footer-link"> Despre</a> </li>
+            <li class="footer-item"><a href="./contactUS.html" class="footer-link"> Contact</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> GDPR</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> Termeni</a> </li>
-
         </ul>
     </div>
 
