--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                                 fotografii uimitoare. Fiți martor la dăruirea, triumfurile și camaraderia care
                                 definesc comunitatea noastră vibrantă. Experimentați esența pasiunii și
                                 angajamentului nostru cu fiecare imagine.</p>
-                            <a href="./pages/despre.html" class="btn-text"> mai multe detalii&rarr;</a>
+                            <a href="./pages/gallery.html" class="btn-text"> mai multe detalii&rarr;</a>
                         </div>
                     </div>
         </section>
