--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -44,7 +44,7 @@
                   <img src="../img/1-gal.jpg">
                   <img src="../img/2-gal.jpg">
                   <img src="../img/3-gal.jpg">
-                  <img src="../img/4-gal.jpg">
+                  <img src="../img/4-gal.jpeg">
                   <img src="../img/5-gal.jpg">
                   <img src="../img/6-gal.jpg">
                   <img src="../img/1-gal.jpg">
@@ -61,7 +61,7 @@
                 <div class="column">
                     <img src="../img/6-gal.jpg">
                     <img src="../img/5-gal.jpg">
-                    <img src="../img/4-gal.jpg">
+                    <img src="../img/4-gal.jpeg">
                     <img src="../img/3-gal.jpg">
                     <img src="../img/2-gal.jpg">
                     <img src="../img/6-gal.jpg">
