--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="footer-nav">
         <ul class="footer-list">
             <li class="footer-item"><a href="#" class="footer-link"> Nova BJJ</a> </li>
-            <li class="footer-item"><a href="./pages/despre.html" class="footer-link"> Despre</a> </li>
+            <li class="footer-item"><a href="#despre" class="footer-link"> Despre</a> </li>
             <li class="footer-item"><a href="./pages/contactUS.html" class="footer-link"> Contact</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> GDPR</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> Termeni</a> </li>
