--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -47,12 +47,12 @@
                   <img src="../img/4-gal.jpeg">
                   <img src="../img/5-gal.jpg">
                   <img src="../img/6-gal.jpg">
-                  <img src="../img/1-gal.jpg">
+                  <img src="../img/3-gal.jpg">
                 </div>
                 <div class="column">
-                    <img src="../img/2-gal.jpg">
-                    <img src="../img/3-gal.jpg">
-                    <img src="../img/6-gal.jpg">
+                    <img src="../img/gal-11.jpg">
+                    <img src="../img/gal-13.jpg">
+                    <img src="../img/gal-15.jpg">
                     <img src="../img/1-gal.jpg">
                     <img src="../img/5-gal.jpg">
                     <img src="../img/2-gal.jpg">
