--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                                 fotografii uimitoare. Fiți martor la dăruirea, triumfurile și camaraderia care
                                 definesc comunitatea noastră vibrantă. Experimentați esența pasiunii și
                                 angajamentului nostru cu fiecare imagine.</p>
-                            <a href="./pages/gallery.html" class="btn-text"> mai multe detalii&rarr;</a>
+                            <a href="https://photos.google.com/share/AF1QipOIkiQNG3mJdEI9at0f2eM-fL_0roerfURPxPoK4NSXc3TKsHp1VcYvKFIoZ3oDww?pli=1&key=LXlfbS1CMlVXbXFqby1yUktiVFdodHlBcGk4QWlBl" 
+                            class="btn-text"> mai multe detalii&rarr;</a>
                         </div>
                     </div>
         </section>
