add font awesome to menu

--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
     <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon-32x32.png">
-
+    <script src="https://kit.fontawesome.com/2b9cdc1c9a.js" crossorigin="anonymous"></script>
     <title>Academia Club Sportiv Coral</title>
 </head>
 
 <body>
     <nav class="zone nav sticky">
         <ul class="main-nav">
-            <li><a href="./index.html">Academia Nova - Coral Sport</a></li>
-            <li><a href="./pages/gallery.html">Galerie</a></li>
-            <li><a href="./pages/team.html">Echipa noastra</a></li>
-            <li><a href="./pages/abonamente.html">Abonamente</a></li>
-            <li><a href="./pages/antrenamente.html">Program</a></li>
-            <li class="push"><a href="./pages/contactUS.html">Contact</a></li>
+            <li><a href="./index.html"><i class="fa-solid fa-house"></i> Academia Nova - Coral Sport</a></li>
+            <li><a href="./pages/gallery.html"><i class="fa-solid fa-image"></i> Galerie</a></li>
+            <li><a href="./pages/team.html"><i class="fa-solid fa-people-group"></i> Echipa noastra</a></li>
+            <li><a href="./pages/abonamente.html"><i class="fa-regular fa-credit-card"></i> Abonamente</a></li>
+            <li><a href="./pages/antrenamente.html"><i class="fa-solid fa-calendar-days"></i> Program</a></li>
+            <li class="push"><a href="./pages/contactUS.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
         </ul>
     </nav>
     <header>
