Make menu Responsive

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 <body>
     <nav class="zone nav sticky">
+        <input type="checkbox" id="hamburger">
+        <label for="hamburger"><i class="fa-solid fa-bars"></i></label>
         <ul class="main-nav">
             <li><a href="./index.html"><i class="fa-solid fa-house"></i> Academia Nova - Coral Sport</a></li>
             <li><a href="./pages/gallery.html"><i class="fa-solid fa-image"></i> Galerie</a></li>
