Footer make responsive, add font awesome

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="./pages/abonamente.html"><i class="fa-regular fa-credit-card"></i> Abonamente</a></li>
             <li><a href="./pages/antrenamente.html"><i class="fa-solid fa-calendar-days"></i> Program</a></li>
             <li class="push"><a href="./pages/contactUS.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>
+
         </ul>
     </nav>
     <header>
@@ -81,8 +82,8 @@
                                 fotografii uimitoare. Fiți martor la dăruirea, triumfurile și camaraderia care
                                 definesc comunitatea noastră vibrantă. Experimentați esența pasiunii și
                                 angajamentului nostru cu fiecare imagine.</p>
-                            <a href="https://photos.google.com/share/AF1QipOIkiQNG3mJdEI9at0f2eM-fL_0roerfURPxPoK4NSXc3TKsHp1VcYvKFIoZ3oDww?pli=1&key=LXlfbS1CMlVXbXFqby1yUktiVFdodHlBcGk4QWlBl" 
-                            class="btn-text"> mai multe detalii&rarr;</a>
+                            <a href="https://photos.google.com/share/AF1QipOIkiQNG3mJdEI9at0f2eM-fL_0roerfURPxPoK4NSXc3TKsHp1VcYvKFIoZ3oDww?pli=1&key=LXlfbS1CMlVXbXFqby1yUktiVFdodHlBcGk4QWlBl"
+                                class="btn-text"> mai multe detalii&rarr;</a>
                         </div>
                     </div>
         </section>
@@ -100,6 +101,16 @@
             <li class="footer-item"><a href="./pages/contactUS.html" class="footer-link"> Contact</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> GDPR</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> Termeni</a> </li>
+            <li class="social-item"></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i> </a>
+                <a href="#"><i class="fa-brands fa-whatsapp"></i> </a>
+                <a href="#"><i class="fa-brands fa-discord"></i> </a>
+                <a href="#"><i class="fa-brands fa-reddit"></i> </a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i> </a>
+                <a href="#"><i class="fa-brands fa-google"></i> </a>
+                <a href="#"><i class="fa-brands fa-tiktok"></i></i> </a>
+                <a href="#"><i class="fa-brands fa-youtube"></i> </a>
+            </li>
         </ul>
     </div>
 
