--- a/pages/contactUS.html
+++ b/pages/contactUS.html
@@ -82,6 +82,16 @@
             <li class="footer-item"><a href="./contactUS.html" class="footer-link"> Contact</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> GDPR</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> Termeni</a> </li>
+            <li class="social-item"></a>
+                <a href="#"><i class="fa-brands fa-facebook"></i> </a>
+                <a href="#"><i class="fa-brands fa-whatsapp"></i> </a>
+                <a href="#"><i class="fa-brands fa-discord"></i> </a>
+                <a href="#"><i class="fa-brands fa-reddit"></i> </a>
+                <a href="#"><i class="fa-brands fa-x-twitter"></i> </a>
+                <a href="#"><i class="fa-brands fa-google"></i> </a>
+                <a href="#"><i class="fa-brands fa-tiktok"></i></i> </a>
+                <a href="#"><i class="fa-brands fa-youtube"></i> </a>
+            </li>
         </ul>
     </div>
 
