--- a/pages/antrenamente.html
+++ b/pages/antrenamente.html
@@ -57,33 +57,6 @@
                                 fizica, motricitate, flexibilitate, viteza, rezistenta si forta, capatate prin
                                 antrenament
                                 constant, fara siretlicuri. Sa nu reducem conceptul de Judo doar la muschi!<br />
-                                <br />
-                                Orice copil care practica in mod constant un sport trebuie sa faca si pregatire fizica
-                                (pe
-                                langa antrenamentul specific sportului respectiv): flotari, abdomene, alergare de viteza
-                                si
-                                rezistenta, genoflexiuni, exercitii de izometrie, sarituri peste obstacole, exercitii de
-                                aerobic.<br />
-                                <br />
-                                La ce intensitate este bine sa se faca aceste exercitii de Judo sau Jitsu? Copiii au
-                                multa
-                                energie, si daca nu si-o consuma nu isi gasesc locul, nu au un somn linistit, nu mananca
-                                bine etc. Recomandarea noastra este ca sportul sa fie facut in asa fel incat copilul sa
-                                oboseasca la antrenament. Nu de fiecare data sa dea totul, evident, dar sa
-                                oboseasca.<br />
-                                <br />
-                                Cum ne dam seama ca un copil a obosit? Se inroseste la fata usor, incepe sa transpire,
-                                sa
-                                gafaie, nu mai poate vorbi fara sa faca pauza, corectitudinea exercitiilor scade (ex:
-                                flotari incorecte), mareste pauza intre repetitii (abdomene sau genoflexiuni cu pauza
-                                marita).<br />
-                                <br />
-                                Inca o data va spunem, dragi parinti, sa aveti grija la experienta instructorului pe
-                                care il
-                                alegeti, si eventual sa urmariti de pe margine cateva antrenamente ale copilului
-                                dvs.<br />
-                                <br />
-                                Noi va asteptam cu drag la cursurile noastre de Jiu Jitsu Brazilian - Judo - Grappling.
                             </p>
                             <label for="ch1"> Read Less </label>
                         </div>
@@ -101,68 +74,14 @@
                         </p>
                         <hr>
                         <div class="content2">
-                            <p>Printre cele mai populare sporturi și arte marțiale se numără boxul, wrestlingul, karate,
-                                kick boxing, MMA, judo, taekwondo, Muay Thai sau jiu-jitsu brazilian. Fiecare disciplină
-                                are
-                                propriile caracteristici și reguli unice, dar toate necesită tărie, disciplină și multă
-                                muncă pentru a reuși în competiție sau pentru a dezvolta abilități fizice, spirituale și
-                                morale.<br />
-                                <br />
-
-                                Box
-                                Boxul este un sport în care doi concurenți se confruntă într-un ring și luptă folosind
-                                doar
-                                pumnii. Duelul se desfășoară conform unor reguli stricte, în runde (de la 3 la 12
-                                runde),
-                                pentru o limită de timp (de exemplu, 3 minute), cu pauze scurte între runde. Sunt
-                                permise
-                                doar lovituri la nivelul corpului și al capului adversarului. Sunt interzise atacurile
-                                sub
-                                centură, loviturile cu cotul sau cu capul. Concurenții sunt împărțiți în categorii de
-                                greutate, permițând astfel o competiție între persoane cu greutate similară. Exemple de
-                                categorii de greutate în box sunt: categoria ușoară, categoria mijlocie, categoria
-                                semigrea
-                                și categoria grea. Boxul se bazează pe diferite tehnici de lovire cu pumnul, cum ar fi
-                                pumnul drept, pumnul în seceră, pumnul încrucișat etc. Luptătorii lucrează la precizie,
-                                viteză și putere pentru a-și lovi cu precizie adversarul și în același timp, pentru a
-                                evita
-                                loviturile acestuia. Câștigătorul este boxerul care își pune la pământ adversarul sau
-                                câștigă la puncte în fața acestuia.<br />
-                                <br />
-
-                                Kickboxing
-                                Kickboxingul este un sport de luptă în care tehnicile de box sunt combinate cu lovituri
-                                de
-                                picior caracteristice artelor marțiale tradiționale. Kickboxingul este o formă populară
-                                de
-                                sport de competiție, dar și un sistem eficient de autoapărare. Folosește diviziuni de
-                                greutate, iar concurenții luptă într-un ring special, folosind tehnici selectate de
-                                lovituri
-                                de pumn și de picior pentru a obține puncte sau pentru a-și pune la pământ adversarul.
-                                În
-                                timpul antrenamentelor și luptelor, luptătorii poartă protecții pentru cap, brațe și
-                                picioare pentru a reduce riscul de rănire. Acest sport de luptă permite exprimarea de
-                                sine
-                                prin competiție sportivă, dezvoltă respectul față de adversar și respectul pentru
-                                fair-play.
-                                Este o disciplină care necesită din partea concurenților nu doar abilități tehnice, ci
-                                și
-                                voință, determinare, flexibilitate și condiție fizică.<br />
-                                <br />
-
+                            <p>
                                 Judo
                                 Judo este o artă marțială japoneză dezvoltată de Jigoro Kano la sfârșitul secolului al
                                 XIX-lea, care se concentrează pe folosirea tehnicilor de aruncare, răsturnare,
                                 strangulare
                                 și de influențare pentru a învinge un adversar fără a folosi neapărat o mare cantitate
                                 de
-                                forță fizică. Pe lângă faptul că se concentrează pe abilitățile de luptă, judo este de
-                                asemenea, o filozofie a autodepășirii, a respectului reciproc, a autocontrolului și a
-                                cooperării. În judo, concurenții poartă un gi – ținută specială care îi ajută să execute
-                                tehnicile și care simbolizează tradițiile acestei arte marțiale. Competiția are loc în
-                                cadrul unor turnee și concursuri, unde participanții sunt împărțiți pe categorii de
-                                greutate
-                                și niveluri de competență.<br />
+                                forță fizică.<br />
                             </p>
                             <label for="ch2"> Read Less </label>
                         </div>
@@ -185,42 +104,6 @@
                                 tehnicii si tacticii, al modelarii calitatilor fizice in concordanta cu procedeele de
                                 baza,
                                 care formeaza (Tokui-Waza) actiunile complexe pentru obtinerea victoriei.<br />
-                                <br />
-                                Tokui-Waza reprezinta tehnica individuala, competitiva a fiecarui judokan, prin care
-                                executa
-                                rational si cu eficienta procedeele tehnice indifferent de adversarul intalnit.
-                                Antrenamentul rational reprezinta legatura dintre KOKI, KI si WAZA, ca trei componente
-                                fara
-                                de care nu se poate desfasura o activitate de instuire superioara in JUDO.<br />
-                                <br />
-                                KOKI- oportunitatea- reprezinta modalitatea prin care judokanul isi alege sau provoaca
-                                in
-                                timpul luptei momentul favorabil declansarii atacului prin tehnica sa preferata.
-                                KI- alegerea tempoului declansarii atacului, a prezentei de spirit ce reprezinta viteza
-                                de
-                                reactie plus viteza de executie.<br />
-                                <br />
-                                WAZA- tehnica complexa necesara pentru finalizarea atacului. Ea curpinde forta fizica,
-                                actiunea complexa a bratelor, a trunchiului si picioarelor, gandirea si maniera
-                                finalizarii
-                                atacurilor.
-                                Executarea procedeelor tehnice in judo, nu corespunde manifestarii fortei brute.
-                                Pentru progress, factorul dominant il costituie alegerea momentului oportun de
-                                declansare a
-                                atacului.Alegera momentului solicita un bun echilibru psihic, care se obtine dupa multi
-                                ani
-                                de pregatire si studiu practic al judoului.<br />
-                                <br />
-                                TANDOKU-RENSHIU(antrenamentul fara partener)
-                                Prin TANDOKU-RENSHIU se urmareste dezvoltarea simtului miscarii, accentuandu-se primele
-                                faze
-                                ale fiecarui procedeu tehnic : dezechilibrarea si intrarea.Se poate prfectiona in
-                                acelasi
-                                timp mai multe tehnici, fiind folosite si ca mijloc eficient de pregatire a organismului
-                                in
-                                prima parte a lectiei cu sportivii avansati.<br />
-                                <br />
-
                             </p>
                             <label for="ch3"> Read Less </label>
                         </div>
