--- a/pages/abonamente.html
+++ b/pages/abonamente.html
@@ -67,7 +67,7 @@
             <li class="footer-item"><a href="#" class="footer-link"> GDPR</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> Termeni</a> </li>
             <li class="social-item"></a>
-                <a href="#"><i class="fa-brands fa-facebook"></i> </a>
+                <a href="https://www.facebook.com/p/Nova-BJJ-Bac%C4%83u-100063561429614/?locale=ro_RO&_rdr"><i class="fa-brands fa-facebook"></i> </a>
                 <a href="#"><i class="fa-brands fa-whatsapp"></i> </a>
                 <a href="#"><i class="fa-brands fa-discord"></i> </a>
                 <a href="#"><i class="fa-brands fa-reddit"></i> </a>
