--- a/pages/team.html
+++ b/pages/team.html
@@ -77,7 +77,8 @@
                         <h3 class="antrenor-p-head">Instructor Jiu Jitsu Brazilian, Judo, Muay Thai</h3>
                         <p class="antrenor-p">Centura mov este instructor de Jiu Jitsu Brazilian pentru grupa de varsta
                             10-15ani.
-                            Centura maro in Judo si cu experienta in Muay Thai si Kick Boxing.</p>
+                            Centura maro in Judo si cu experienta in Muay Thai si Kick Boxing. Membru al Federatiei Romane de Arte Martiale</p>
+                            <p>Multiplu medaliat  la cupele TOMIS, Muntenia, Braila, etc. Campion National si Open Master ADCC 2023, 2024</p>
                     </div>
                 </div>
             </div>
@@ -86,7 +87,7 @@
                     <h2 class="antrenor">Stefan Benchea</h2>
                     <div class="echipa-box">
                         <figure class="membru"></figure>
-                        <img src="../img/stefan.png" class="antrenor1" alt="Matei Constantin">
+                        <img src="../img/stefan.png" class="antrenor1" alt="Stefan Bechea">
                         </figure>
                     </div>
                     <div class="rand">
@@ -95,6 +96,7 @@
                         <h3 class="antrenor-p-head">Instructor Jiu Jitsu Brazilian</h3>
                         <p class="antrenor-p">Centura mov este instructor de Jiu Jitsu Brazilian pentru grupa de varsta
                             6 - 10ani.</p>
+                       <p>Campion National Si Open ADCC 2024 Master 3.</p>
                     </div>
                 </div>
             </div>
@@ -114,7 +116,7 @@
             <li class="footer-item"><a href="#" class="footer-link"> GDPR</a> </li>
             <li class="footer-item"><a href="#" class="footer-link"> Termeni</a> </li>
             <li class="social-item"></a>
-                <a href="#"><i class="fa-brands fa-facebook"></i> </a>
+                <a href="https://www.facebook.com/p/Nova-BJJ-Bac%C4%83u-100063561429614/?locale=ro_RO&_rdr"><i class="fa-brands fa-facebook"></i> </a>
                 <a href="#"><i class="fa-brands fa-whatsapp"></i> </a>
                 <a href="#"><i class="fa-brands fa-discord"></i> </a>
                 <a href="#"><i class="fa-brands fa-reddit"></i> </a>
