--- a/pages/contactUS.html
+++ b/pages/contactUS.html
@@ -39,7 +39,7 @@
         <section class="contact-section" id="contact">
             <div class="row contact-content">
                 <div class="col-1-of-2">
-                    <h2 class="contact-heading">Contacteaz-ne</h2>
+                    <h2 class="contact-heading">Contacteaza-ne</h2>
                     <p class="paragraf">Pentru întrebări, colaborări sau alte informații, te rugăm să ne contactezi
                         folosind detaliile de mai jos sau să completezi formularul.</p>
                     <p class="paragraf">Asociatia Club Sportiv Coral - Cont BCR IBAN RO59 RNCB 0279 1754 3718 0001.</p>
